# gogdownloader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: FindJSON.cmake  FindOAuth.cmake  FindProtoBufC.cmake  FindProtobufC.cmake
docs/: api  doxygen.conf  shell
src/: CMakeLists.txt  api.c  concurrent.vala  config.c  config.proto  gog.c  gog.h  http.c  main.c  serialization.c  state.proto  token.h.in  util.c  xdg-user-dir-lookup.c
vapi/: posix.vapi
